--- a/.github/workflows/test-macos.yml
+++ b/.github/workflows/test-macos.yml
@@ -4,31 +4,11 @@ on:
       - 'main'
       - 'dev'
 
-name: test-script
+name: test-macos-shell
 
 jobs:
-  test-linux-shell:
-    runs-on: ubuntu-22.04
-    steps:
-      - name: clone-branch
-        run: |
-          git clone -b dev https://github.com/Defirence/pyenv-buildtools-script.git
-          printf "List files and cd into repo dir on runner..."
-          ls -lah
-          cd pyenv-buildtools-script
-          ls -lah
-          echo $PWD
-      - name: run-linux-shell-tests
-        run: |
-          printf "Running tests against the script on ubuntu-22.04..."
-          ls -lah
-          echo $PWD
-          cd pyenv-buildtools-script
-          chmod +x ./install-python-buildenv-linux.sh
-          sh ./install-python-buildenv-linux.sh
-          printf "Tests run against the script are complete on ubuntu-22.04 image..."
   test-macos-shell:
-    runs-on: macos-12.5
+    runs-on: macos-12
     steps:
       - name: clone-branch
         run: |
